[project]
name = "nemconmap"
version = "0.0.8"
authors = [
  { name="Nicholas Clippingdale", email="nick.clippingdale@gmail.com" },
]
dependencies = [
	"nemosis>=3.8.1",
	"pandas>=2.2.3"
]
description = "A package to download NEMWeb files to analyse constraints"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/nicholas-clippingdale/nemconmap"
Issues = "https://github.com/nicholas-clippingdale/nemconmap/issues"
